# mcdrs

./: Cargo.toml
endpoint/: Cargo.toml
endpoint/src/: handle_socket.rs  handler.rs  lib.rs  server.rs
endpoint/src/frame/: mod.rs  request.rs  response.rs
src/: main.rs
storage/: Cargo.toml
storage/src/: hash_map_storage.rs  lib.rs
