[workspace]
members = [
    "endpoint",
    "storage"
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
endpoint = { path = "endpoint" }
storage = { path = "storage" }

async-trait = "0.1.73"
tokio = "1.32.0"
log = "0.4.20"
tokio-util = "0.7.9"
tokio-stream = "0.1.14"
futures = "0.3.28"
env_logger = "0.10.0"

[package]
name = "mcdrs"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
endpoint.workspace = true
storage.workspace = true

tokio = { workspace = true, features = ["macros", "rt"]}
env_logger.workspace = true
